[tool.poetry]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = ["Guilherme Carvalho <gui.ifsp11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
databases = {version = "^0.7.0", extras = ["asyncpg"]}
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.0"
pydantic = "^2.6.0"
alembic = "^1.13.0"
bcrypt = "^4.0.1"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "*"
pytest = "*"
httpx = "*"
pytest-mock = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
